--- a/index.html
+++ b/index.html
@@ -14,9 +14,26 @@
   <script src="js/main.js" defer></script> <!-- defer = execution du script après que le cahrgement du  document -->
 </head>
 <body class="fullscreen">
-  <div class="container">
-    <h1 class="title">Salut World!</h1>
-	<a href="www.google.com">google.com</a>
-  </div>
+  <!-- <div class="container">
+    <div id="moncercle1"></div>
+    <div id="moncercle2"></div>
+    <div id="moncercle3"></div>
+    <div id="moncercle4"></div>
+    <div id="moncercle5"></div>
+  </div> -->
+    <div class="container">
+        <div class="top-left">
+          <button><div id="blue" class="gamebutton" onClick="addToPlayer(this.id)"></div></button>
+        </div>
+        <div class="top-right">
+          <button><div id="purple" class="gamebutton" onClick="addToPlayer(this.id)"></div></button>
+        </div>
+        <div class="bottom-left">
+          <button><div id="red" class="gamebutton" onClick="addToPlayer(this.id)"></div></button>
+        </div>
+        <div class="bottom-right">
+          <button><div id="orange" class="gamebutton" onClick="addToPlayer(this.id)"></div></button>
+        </div>
+    </div>
 </body>
 </html>
