--- a/index.html
+++ b/index.html
@@ -14,26 +14,16 @@
   <script src="js/main.js" defer></script> <!-- defer = execution du script après que le cahrgement du  document -->
 </head>
 <body class="fullscreen">
-  <!-- <div class="container">
-    <div id="moncercle1"></div>
-    <div id="moncercle2"></div>
-    <div id="moncercle3"></div>
-    <div id="moncercle4"></div>
-    <div id="moncercle5"></div>
-  </div> -->
+    <header><h1>JV-JP</h1></header>
     <div class="container">
-        <div class="top-left">
-          <button><div id="blue" class="gamebutton" onClick="addToPlayer(this.id)"></div></button>
-        </div>
-        <div class="top-right">
-          <button><div id="purple" class="gamebutton" onClick="addToPlayer(this.id)"></div></button>
-        </div>
-        <div class="bottom-left">
-          <button><div id="red" class="gamebutton" onClick="addToPlayer(this.id)"></div></button>
-        </div>
-        <div class="bottom-right">
-          <button><div id="orange" class="gamebutton" onClick="addToPlayer(this.id)"></div></button>
-        </div>
+      <div class="cercle blue"></div>
+      <div class="cercle purple"></div>
+      <div class="cercle red"></div>
+      <div class="cercle orange"></div>
+    </div>
+    <div class="buttons">
+      <button id="go">GO</button>
+      <!-- <button id="reset">reset</button> -->
     </div>
 </body>
 </html>
