--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body class="fullscreen">
     <header><h1>JV-JP</h1></header>
     <div class="container">
-      <div class="cercle blue"></div>
-      <div class="cercle purple"></div>
-      <div class="cercle red"></div>
-      <div class="cercle orange"></div>
+      <div class="cercle" id="blue" onclick="saisie(1);"></div>
+      <div class="cercle" id="purple" onclick="saisie(2);"></div>
+      <div class="cercle" id="red" onclick="saisie(3);"></div>
+      <div class="cercle" id="orange" onclick="saisie(4);"></div>
     </div>
     <div class="buttons">
       <button id="go">GO</button>
